fixed layout issues gallery footer headerlogo

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,6 +1,11 @@
 #footer{
-	background-color: var(--bg-dark);
-	/* padding-bottom: 3rem; */
+	background-color: #000;
+	padding-top: .3rem;
+	height: 100vh;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	align-items: center;
 }
 #footer p{
 	color: var(--bg-light);
@@ -9,23 +14,25 @@
 	align-items: center;
 	
 }
-.pre-footer{
-	
-	background-position: center;
-	background-repeat: no-repeat;
-	background-size: cover;
-	
-	height: 80vh;
-	
+
+#footer .pre-footer{
+	background-color: #000;
+	padding-top:0;
+	height: 50vh;
+	display: flex;
+	justify-content: center;
 }
 .pre-footer .infobox{
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	justify-content: space-between;
+	justify-content: space-arround;
 	height: 100%;
-padding-block: 3rem;
+
 margin: 0;
+}
+.infobox .footer-infobox-logo{
+	width: 10rem
 }
 
 .pre-footer .button{
@@ -37,15 +44,25 @@ margin: 0;
 .pre-footer .button i{
 	color: var(--bg-light);
 }
-.last-footer{
-	
-	height: 100%;
+#footer .last{
+	padding-top:0 ;
+	height: 50vh;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	gap: 5rem;
-padding-block: 3rem;
+	background-color: var(--bg-dark);
+	width: 100%;
+}
+.last-footer{
+	
+	height: 58%;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	align-items: center;
+	width: 100%;
+
 
 }
 .last-footer p{
@@ -64,28 +81,50 @@ padding-block: 3rem;
 footer section.last{
 	padding-top: 5rem;
 }
+#footer .cnpjoto{
+	align-self: center;
+}
 @media(min-width:767.98px){
-	footer{
-		padding-bottom: 3rem;
-		
-	}
-	.pre-footer{
-		display: flex;
-		background-position: left;
-		background-size: cover;
-		background-color: #000!important;
-	}
-	.pre-footer .infobox{
-		justify-content: center;
-		width: 50%;
-		
+#footer .pre-footer{
+height: 80vh;
+}
+#footer .last{
+height: 30vh;
+}
+
+	#footer .pre-footer .infobox{
+		display: grid;
+		grid-template-columns: 2fr 1fr;
+		margin: 0;
+		padding: 0;
+		width: 80%;
 	}
 	.pre-footer .infobox h2{
 		font-size: 3rem;
+		grid-column: 1;
+	grid-row: 1;
+	align-self: end;
+	justify-self: center;
+	max-width: 80rem;
+	line-height: 5rem;
 	}
-.last{
-	padding-bottom: 5rem;
-}
+	.pre-footer .infobox a{
+		grid-column: 1;
+	grid-row: 2;
+	align-self: baseline;
+	justify-self: center;
+	max-width: 50rem;
+
+	}
+	.pre-footer .infobox img{
+		grid-column: 2;
+	grid-row: 1 / 3;
+	justify-self: center;
+    align-self: center;
+	width: 100%;
+	}
+
+
 	.last .last-footer{
 	flex-direction: row;
 	align-items: center;
